refactor: use AttributeValues and SQL